# 15Game

./: CMakeLists.txt  README.md
src/: 15Game.pro  CMakeLists.txt  a_star.cpp  a_star.h  block.cpp  block.h  board.cpp  board.h  cenwidget.cpp  cenwidget.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h
